--- a/package.json
+++ b/package.json
@@ -1,25 +1,5 @@
 {
-  "name": "web_labs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.js --ignore-pattern node_modules/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yuliamarkiv/web_labs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yuliamarkiv/web_labs/issues"
-  },
-  "homepage": "https://github.com/yuliamarkiv/web_labs#readme",
-  "devDependencies": {
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+  "dependencies": {
+    "js-base64": "^3.7.2"
   }
 }
